[gd_scene load_steps=6 format=3 uid="uid://c1t12ojqg5umc"]

[ext_resource type="Script" path="res://Scripts/playermovement.gd" id="1_qaktx"]
[ext_resource type="Script" path="res://Scripts/interactionmanager.gd" id="2_nrla2"]
[ext_resource type="Script" path="res://Scripts/notesmanager.gd" id="3_42aix"]
[ext_resource type="SpriteFrames" uid="uid://b14aioqoo7m4q" path="res://Resources/Lorelle.tres" id="4_wvgsy"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sc3re"]
height = 2.27382

[node name="Player" type="CharacterBody3D"]
collision_mask = 3
script = ExtResource("1_qaktx")
walkSpeed = 5.0
sprintSpeed = 7.5
gravity = 3.8
maxStamina = 10.0
sensitivity = 0.5

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -0.017)
shape = SubResource("CapsuleShape3D_sc3re")

[node name="Cam" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.94855, 0)
fov = 100.0

[node name="CanvasLayer" type="CanvasLayer" parent="Cam"]

[node name="Panel" type="Panel" parent="Cam/CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="InteractionIndicator" type="Panel" parent="Cam/CanvasLayer/Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 22.0
offset_top = -35.0
offset_right = 32.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.35999, 2.32)

[node name="Label" type="Label" parent="Cam/CanvasLayer/Panel/InteractionIndicator"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
scale = Vector2(0.245933, 0.29924)
theme_override_font_sizes/font_size = 24
text = "E"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Completion Check" type="Panel" parent="Cam/CanvasLayer"]
visible = false
offset_right = 350.0
offset_bottom = 170.0

[node name="InteractionManager" type="Node3D" parent="Cam"]
script = ExtResource("2_nrla2")

[node name="InteractionCheck" type="RayCast3D" parent="Cam/InteractionManager"]
unique_name_in_owner = true
target_position = Vector3(0, 0, -5)
collision_mask = 6
collide_with_areas = true

[node name="NotesManager" type="Node3D" parent="."]
script = ExtResource("3_42aix")

[node name="StaminaBuffer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2

[node name="RecoveryTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
billboard = 2
texture_filter = 0
sprite_frames = ExtResource("4_wvgsy")

[connection signal="timeout" from="StaminaBuffer" to="." method="_on_stamina_buffer_timeout"]
[connection signal="timeout" from="RecoveryTimer" to="." method="_on_recovery_timer_timeout"]
